Dodanie strumienia wejścia

--- a/Lesson2/Home/Home.vcxproj
+++ b/Lesson2/Home/Home.vcxproj
@@ -19,11 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{8DB136BE-9ADA-45A3-BD94-F6F942AC8D4E}</ProjectGuid>
+    <ProjectGuid>{88FB0CFC-8788-47C8-941B-EC8B01438076}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Lesson2</RootNamespace>
+    <RootNamespace>Home</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>Lesson</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
