--- a/Lesson2/Lesson/Lesson.vcxproj
+++ b/Lesson2/Lesson/Lesson.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{CAA6BFE1-B652-40B7-BABF-C2585907D62F}</ProjectGuid>
+    <ProjectGuid>{B0ADFCEA-B279-4F89-9593-83012E2BD6E6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Home</RootNamespace>
+    <RootNamespace>Lesson</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
