--- a/Lesson 6/HomeTask1/HomeTask1.vcxproj
+++ b/Lesson 6/HomeTask1/HomeTask1.vcxproj
@@ -19,11 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{4AFA815C-5E70-477A-836C-8FEA34C7CA52}</ProjectGuid>
+    <ProjectGuid>{68691E54-2AA1-4716-881D-174557EA1541}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Lesson6</RootNamespace>
+    <RootNamespace>HomeTask1</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>HomeTask1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
